src/objects/ffbf__BankFormatMappingRecordType__c.object
<CustomObject>
    <fields>
        <fullName>ffbf__BankFormatDefinitionRecordType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Format Definition Record Type</label>
        <referenceTo>ffbf__BankFormatDefinitionRecordType__c</referenceTo>
        <relationshipLabel>Bank Format Mapping Record Types</relationshipLabel>
        <relationshipName>BankFormatMappingRecordTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbf__BankFormatMapping__c</fullName>
        <label>Bank Format Mapping</label>
        <referenceTo>ffbf__BankFormatMapping__c</referenceTo>
        <relationshipLabel>Bank Format Mapping Record Types</relationshipLabel>
        <relationshipName>BankFormatMappingRecordTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbf__OutputTypeSequence__c</fullName>
        <label>Output Type Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbf__RecordTypeExternalId__c</fullName>
        <formula>ffbf__BankFormatDefinitionRecordType__r.ffbf__BankFormatDefinition__r.ffbf__ExternalId__c  &amp; &quot;#&quot; &amp;  ffbf__BankFormatDefinitionRecordType__r.ffbf__ExternalId__c</formula>
        <label>Record Type External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__RootSourceObject__c</fullName>
        <label>Root Source Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Bank Format Mapping Record Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Format Mapping Record Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>